# HBCU4U

./: .replit  HBCUdata.csv  backup.sqlite3  db.sqlite3  hbcu2.json  hbcu3.json  main.py  manage.py  pyproject.toml  schools.csv  schools.json
config/: settings.py  urls.py
hbcu/: admin.py  apps.py  forms.py  models.py  views.py
hbcu/djangomaps/: pyvenv.cfg
hbcu/djmaps/: manage.py
hbcu/migrations/: 0001_initial.py  0002_auto_20200809_2010.py  0002_auto_20200811_0719.py  0002_auto_20200812_0339.py  0002_college_url.py  0003_auto_20200812_0108.py  0003_auto_20200812_0341.py  0003_delete_profile.py  0003_user.py  0004_auto_20200731_2031.py  0004_auto_20200812_0115.py  0004_auto_20200812_0343.py  0005_auto_20200731_2034.py  0005_auto_20200812_0208.py  0005_auto_20200812_0500.py  0006_auto_20200802_0430.py  0006_auto_20200812_0221.py  0006_auto_20200812_0516.py  0007_auto_20200803_0538.py  0007_auto_20200804_1221.py  0007_auto_20200812_0225.py  0007_auto_20200812_0702.py  0008_auto_20200803_0701.py  0008_auto_20200812_1811.py  0009_auto_20200803_1706.py  0009_college_states.py  0010_auto_20200812_2218.py  0010_college_history.py  0011_auto_20200805_0149.py  0011_auto_20200813_0544.py  0012_auto_20200805_0149.py  0013_auto_20200805_0426.py  0014_hbcugrads.py
hbcu/templates/: base.html  signup.html
static/css/: styles.css
static/js/: customers.js  interactive-map.js  main.js  schools.js  script.js  states.js
templates/: base.html
templates/hbcu/: index.html
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200806_0158.py
(+23 files in other folders)
