[tool.poetry]
name = "hbcu4u"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.8"
django-registration-redux = "^2.8"
django-debug-toolbar = "^2.2"
django-extensions = "^3.0.3"
django-filter = "^2.3.0"
react = "^4.3.0"
django-localflavor-us = "^1.1"
django-localflavor = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
